# autotross

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  best_tuned_params.txt
gazebo/models/mini_talon_vtail/: model.sdf
gazebo/worlds/: runway.sdf
include/core/: geo_utils.h  scoped_timer.h
include/csc/localization/: state_estimation_task.h
include/csc/sensors/airspeed/: airspeed.h  airspeed_task.h
include/csc/sensors/altimeter/: altimeter.h  altimeter_task.h
include/csc/sensors/gps/: gps.h  gps_task.h
include/csc/sensors/imu/: imu.h  imu_task.h
include/msg/: airspeed_msg.h  altimeter_msg.h  gps_msg.h  imu_msg.h  msg_variant_types.h  state_estimate_msg.h
include/msg/common_types/: header.h  pose.h  twist.h
models/state_estimation/: README.md  ekf.py  parameter_tuning.py  parameter_tuning_opt.py  simulate_sensors.py  uav_model.py
src/: main.cpp
src/csc/localization/: state_estimation_task.cpp
src/csc/sensors/airspeed/: airspeed_task.cpp
src/csc/sensors/altimeter/: altimeter_task.cpp
src/csc/sensors/gps/: gps_task.cpp
src/csc/sensors/imu/: imu_task.cpp
src/hal/gazebo/: gazebo_airspeed.cpp  gazebo_altimeter.cpp  gazebo_gps.cpp  gazebo_helpers.h  gazebo_imu.cpp
test/: CMakeLists.txt
test/csc/sensors/imu/: CMakeLists.txt  imu_stub.cpp  test_imu_task.cpp
